# sailcut

./: CMakeLists.txt
doc/: makedocs
doc/en/: index.md
doc/fr/: index.md
src/: CMakeLists.txt  sailpainter.h  widgetprofilevert.h
src/geocpp/: geocpp.h  matrix.cpp  matrix.h  matrix4x4.cpp  matrix4x4.h  rect.cpp  rect.h  subspace.cpp  subspace.h  vector.cpp
src/sailcpp/: hulldef.h  panel.cpp  panel.h  rigdef.h  rigworker.cpp  sailcalc.h  sailmould.h  sailworker.cpp
tests/geocpp/: tst_geocpp.cpp
